# QuickScribe

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  .stylelintrc.json  .textlintrc.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  README.en.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES-frontend.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  release-please-config.json  tmp_issues.json  tsconfig.json  typedoc.json  vite.config.ts  vitest.config.ts
.github/: CODEOWNERS  FUNDING.yml  SUPPORT.md  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  story.yml  task.yml
.github/workflows/: articles.yml  ci.yml  nightly.yml  pages.yml  perf.yml  qiita-publish.yml  release-please.yml  release.yml  screenshots.yml  security.yml  test-build.yml
articles/: README.md  local-voice-journal-tauri-rust-svelte.md  qs-engine-swap-trait-factory.md
books/quickscribe-design/: accuracy-as-commodity.md  config.yaml  default-model-reversal.md  engine-abstraction.md  evaluating-formatting-intelligence.md  evaluation-driven-diarization.md  formatting-intelligence.md  introduction.md  local-first-privacy.md  physical-trigger.md  speed-floor-gpu-vulkan.md  vault-data-design.md
docs/: README.md  design.md  non-functional-requirements.md  vision.md
docs/adr/: 0001-record-architecture-decisions.md  0002-stt-engine-strategy.md  0003-reject-google-docs-automation.md  0004-product-positioning-voice-journal.md  0005-tech-stack.md  0006-scope-completeness-policy.md  0007-research-question-framing-method.md  0008-licensing-and-distribution.md  0009-release-versioning-and-1.0-scope.md  0010-v0.1.0-gate-legal-must-only.md  0011-aws-providers-bedrock-and-claude-platform.md  0012-windows-multiarch-multisimd-distribution.md  0013-system-audio-loopback-and-source-unification.md  0014-physical-trigger-integration.md  0015-introspective-tags-and-cross-entry-discovery.md  0016-cloud-stt-providers.md  0017-schema-versioning-and-migration.md  0018-output-language-translation.md  0019-privacy-indicator-and-offline-mode.md  0020-metrics-and-telemetry-stance.md  0021-local-first-defaults.md  0022-model-catalog-curation.md  0023-habit-nudge-local-notification.md  0024-evaluation-redesign-cer-and-nuance.md  0025-japanese-default-model-revision.md  0026-multi-background-transcription-jobs.md  0027-gpu-build-variants.md  0028-single-vulkan-build-startup-gpu-detection.md  0029-simplify-offering-drop-cuda-and-kotoba.md  0030-no-voice-emotion-metadata.md  0031-speaker-diarization-optional-utility.md  0032-content-based-entry-filenames.md  README.md
docs/architecture/: accuracy-regression.dsl  engine-abstraction.dsl  physical-trigger.dsl  privacy-visibility.dsl  refine-intelligence.dsl  sample.dsl  vault-data-design.dsl
docs/design/: brand-colors.md
docs/guide/: physical-triggers.md
docs/marketing/: launch-kit.md
docs/perf/: baseline.md  ja-cer-baseline.json
docs/planning/: 3.1-lean-canvas-and-planning.md  3.2-stakeholders-and-research.md  3.3-personas-and-storybook.md  3.4-spec-and-tdd-plan.md  3.5-waterfall-and-quality.md  3.6-release-ops.md  3.7-marketing.md  4-backlog.md  v1.0.0-readiness.md
docs/process/: article-publishing-policy.md  demo-gif-capture.md  demo-screenshot.md  distribution-and-signing.md  release-channels.md  signpath-integration-draft.md  versioning-and-channels.md  windows-local-rust-build.md
docs/research/: competitive-landscape.md  driven-development.md  gpu-backend-options.md  gpu-driver-prerequisite-ux.md  logo-redesign.md  multi-job-queue-ui-question-design.md  output-language-translation.md  question-framing-method.md  s1-3-loopback-question-design.md  s1-5-physical-trigger-question-design.md  s2-4-cloud-stt-question-design.md  spec-driven-development.md  transcription-efficiency-limits.md  turbo-speedup-question-design.md
e2e/: a11y.spec.ts  demo.spec.ts  screenshots.spec.ts  vite.screenshot.config.ts  wdio.conf.cjs
e2e/mocks/: core.ts  event.ts  plugin-autostart.ts  plugin-dialog.ts  plugin-process.ts  plugin-updater.ts
e2e/specs/: app.e2e.js
public/: local-voice-journal-tauri-rust-svelte.md
scripts/: cargo-win.ps1  cer_ja.py  gen-icon.cjs  generate-frontend-notices.cjs  generate-logo-candidates.py  make-demo-gif.mjs  process-brand-icon.py  refine-nested-crescents.py  release-metrics.mjs  render-diagrams.mjs  render-structurizr.mjs  structurizr-mermaid-config.json  zenn-to-qiita.mjs
scripts/asr_eval/: README.md  cer.py  fetch_common_voice_ja.py  fetch_hf_corpus.py  normalize_ja.py  report_cer.py  requirements.txt  test_asr_eval.py
site/: download.md  guide.md  index.md  package-lock.json  package.json  privacy.md
site/.vitepress/: config.ts
site/en/: download.md  guide.md  index.md
src/: App.svelte  App.svelte.test.ts  app.css  main.ts
src-tauri/: .gitignore  Cargo.toml  about.hbs  about.toml  build.rs  deny.toml  nsis-hooks-cuda.nsh  nsis-hooks.nsh  tauri.conf.json  tauri.cuda.conf.json  tauri.nightly.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio_save.rs  aws_sign.rs  diarize.rs  entry.rs  errcode.rs  job.rs  lib.rs  main.rs  model.rs  record.rs  refine.rs  stt.rs  taskbar.rs  taskbar_widget.rs  testhttp.rs  vault.rs
src-tauri/tests/: gpu_detect_integration.rs  transcribe_integration.rs
src-tauri/tests/fixtures/ja-accuracy/: README.md
src-tauri/tests/fixtures/ja-accuracy/gingatetsudo-no-yoru/: audio.opus  reference.txt
src-tauri/tests/fixtures/ja-accuracy/kumonoito/: audio.opus  reference.txt
src-tauri/tests/fixtures/ja-accuracy/wagahaiha-neko-dearu/: audio.opus  reference.txt
src/lib/: a11y.test.ts  a11y.ts  constants.test.ts  constants.ts  corrections.test.ts  corrections.ts  custom-styles.svelte.test.ts  custom-styles.svelte.ts  device-status.svelte.test.ts  device-status.svelte.ts  discovery.test.ts  discovery.ts  entry.test.ts  entry.ts  errors.test.ts  errors.ts  jobs.test.ts  jobs.ts  model-cache.test.ts  model-cache.ts  note.test.ts  (+33 more)
(+51 files in other folders)
