[package]
name = "quickscribe"
version = "0.0.1"
description = "思考整理・自己理解のためのローカル完結ボイスジャーナル"
authors = ["Takenori Kusaka"]
edition = "2021"

[lib]
name = "quickscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
# 自動アップデート（起動時チェック→バックグラウンドDL→再起動）。
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
# 物理コア数の取得（whisperスレッド数の最適化。論理コア全指定は逆効果）。
num_cpus = "1"
# whisperモデルの初回自動取得(HTTPダウンロード)。軽量・同期・rustls。
ureq = "2"
# 文字起こし(ローカル whisper.cpp / ADR-0002)。whisper-rs が whisper.cpp をビルドする。
whisper-rs = "0.14"
# 音声デコード(純Rust)。mp3等の圧縮音声/WAVを読む(S1.6)。外部ffmpeg不要・配布が軽い。
symphonia = { version = "0.5", default-features = false, features = [
    "mp3",
    "aac",
    "isomp4",
    "flac",
    "vorbis",
    "ogg",
    "wav",
    "pcm",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
