[package]
name = "quickscribe"
version = "0.0.1"
description = "思考整理・自己理解のためのローカル完結ボイスジャーナル"
authors = ["Takenori Kusaka"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Takenori-Kusaka/QuickScribe"

[lib]
name = "quickscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
# 2回目起動のargvを常駐インスタンスへ転送する（例: `quickscribe --toggle-record`）。
# Linux/Windows双方でターミナル/ショートカットから即録音トグルを可能にする。
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
# 自動アップデート（起動時チェック→バックグラウンドDL→再起動）。
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "5"
# 物理コア数の取得（whisperスレッド数の最適化。論理コア全指定は逆効果）。
num_cpus = "1"
# whisperモデルの初回自動取得(HTTPダウンロード)+整形APIのJSON送受信。
ureq = { version = "2", features = ["json"] }
# マイク録音(S1.1)。既定入力デバイスからのキャプチャ(Win:WASAPI / Linux:ALSA)。
cpal = "0.15"
# 録音音声の保存(WAV / 純Rust・依存ゼロ・確実)。
hound = "3"
# モダン圧縮 Opus(.opus = Ogg Opus / audio-encode-rust 調査)。libopusはvendored staticビルドで
# 実行時の外部ライブラリ依存を避ける。ogg はコンテナ多重化(純Rust)。
opus = "0.3"
ogg = "0.9"
# 文字起こし(ローカル whisper.cpp / ADR-0002)。whisper-rs が whisper.cpp をビルドする。
whisper-rs = "0.14"
# 音声デコード(純Rust)。mp3等の圧縮音声/WAVを読む(S1.6)。外部ffmpeg不要・配布が軽い。
symphonia = { version = "0.5", default-features = false, features = [
    "mp3",
    "aac",
    "isomp4",
    "flac",
    "vorbis",
    "ogg",
    "wav",
    "pcm",
] }
# AWSプロバイダ(Amazon Bedrock / Claude Platform on AWS)の SigV4署名 / ADR-0011。
# 同期・tokio非依存(署名計算のみ)。aws-sdk-bedrockruntimeはasync専用のため使わない。
# default-features=false で不要な SigV4A(ECDSA) を外し依存を最小化(通常SigV4は sha2/hmac で足りる)。
aws-sigv4 = { version = "1.4", default-features = false, features = ["sign-http", "http1"] }
aws-credential-types = "1.2"
http = "1"

# Windows タスクバーのサムネイルツールバー(ITaskbarList3)実装用。
# tauri 2.11系の windows クレートと整合させる(HWNDの型不一致回避)。HWNDは生ポインタ経由で再ラップ。
[target."cfg(windows)".dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
