[package]
name = "quickscribe"
version = "0.0.1"
description = "思考整理・自己理解のためのローカル完結ボイスジャーナル"
authors = ["Takenori Kusaka"]
edition = "2021"
license = "MIT"
repository = "https://github.com/Takenori-Kusaka/QuickScribe"

[lib]
name = "quickscribe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
# 2回目起動のargvを常駐インスタンスへ転送する（例: `quickscribe --toggle-record`）。
# Linux/Windows双方でターミナル/ショートカットから即録音トグルを可能にする。
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
# 自動アップデート（起動時チェック→バックグラウンドDL→再起動）。
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# 習慣ナッジのローカル通知（S9.4 #58 / opt-in・サーバー無し・アンカー=起動）。
tauri-plugin-notification = "2"
# OSログイン時の自動起動（S6.3 / 常駐アプリの基本挙動）。Win=レジストリ Run / mac=LaunchAgent / Linux=.desktop。
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
# whisperモデルDLの整合性検証(#391): SHA256照合で改ざん/破損を検出。
# 既に推移依存として解決済み(sha2 0.10 / hex 0.4)のため新規クレートは増えない。
sha2 = "0.11"
hex = "0.4"
# 物理コア数の取得（whisperスレッド数の最適化。論理コア全指定は逆効果）。
num_cpus = "1"
# whisperモデルの初回自動取得(HTTPダウンロード)+整形APIのJSON送受信。
ureq = { version = "3", features = ["json"] }
# マイク録音(S1.1)。既定入力デバイスからのキャプチャ(Win:WASAPI / Linux:ALSA)。
cpal = "0.18"
# 録音音声の保存(WAV / 純Rust・依存ゼロ・確実)。
hound = "3"
# モダン圧縮 Opus(.opus = Ogg Opus / audio-encode-rust 調査)。libopusはvendored staticビルドで
# 実行時の外部ライブラリ依存を避ける。ogg はコンテナ多重化(純Rust)。
opus = "0.3"
ogg = "0.9"
# 文字起こし(ローカル whisper.cpp / ADR-0002)。whisper-rs が whisper.cpp をビルドする。
whisper-rs = "0.14"
# 音声デコード(純Rust)。mp3等の圧縮音声/WAVを読む(S1.6)。外部ffmpeg不要・配布が軽い。
symphonia = { version = "0.6", default-features = false, features = [
    "mp3",
    "aac",
    "isomp4",
    "flac",
    "vorbis",
    "ogg",
    "wav",
    "pcm",
] }
# AWSプロバイダ(Amazon Bedrock / Claude Platform on AWS)の SigV4署名 / ADR-0011。
# 同期・tokio非依存(署名計算のみ)。aws-sdk-bedrockruntimeはasync専用のため使わない。
# default-features=false で不要な SigV4A(ECDSA) を外し依存を最小化(通常SigV4は sha2/hmac で足りる)。
aws-sigv4 = { version = "1.4", default-features = false, features = ["sign-http", "http1"] }
aws-credential-types = "1.2"
http = "1"
# API鍵・AWS秘密情報をOSセキュアストレージに保管(S3.2 / 平文localStorage廃止)。
# Win=Credential Manager / macOS=Keychain / Linux=Secret Service(zbus・純Rust crypto)。
keyring = { version = "3", default-features = false, features = [
    "windows-native",
    "apple-native",
    "sync-secret-service",
    "crypto-rust",
] }

[target."cfg(windows)".dependencies]
# Windows タスクバーのサムネイルツールバー(ITaskbarList3)実装用。
# tauri 2.11系の windows クレートと整合させる(HWNDの型不一致回避)。HWNDは生ポインタ経由で再ラップ。
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# システム音声ループバック(S1.3 / ADR-0013)。任意の出力デバイスを選んでループバック録音。
# cpalは任意出力デバイス選択ループバック非対応(cpal#476/#251)のためwasapi(MIT・active)を使う。
# レンダーデバイス + Direction::Capture でクレートが AUDCLNT_STREAMFLAGS_LOOPBACK を設定する。
wasapi = "0.23"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# CPU移植性(ADR-0012): whisper-rs-sys を vendoring(published 0.13.1を正確再現)し、build.rs に
# GGML_NATIVE=OFF を注入して決定的な AVX2 ベースラインにする。env では GGML_* を cmake に渡せず
# (whisper-rs-sys 0.13.1 build.rs は WHISPER_*/CMAKE_* のみ転送)、これが唯一の確実手段。
# QS_SIMD=avx512 環境変数で GGML_AVX512=ON のSIMD最適化版もこの1箇所で切替可能(Phase2)。
[patch.crates-io]
whisper-rs-sys = { path = "../vendor/whisper-rs-sys-0.13.1" }
